<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/appVessel"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Splash_Activity">

    <RelativeLayout
        android:layout_width="395dp"
        android:layout_height="618dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="124dp"
            android:layout_below="@+id/imageView6"
            android:contentDescription="@string/image_description"
            app:srcCompat="@drawable/vesseltic" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="530dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="0dp"
            android:contentDescription="@string/image"
            app:srcCompat="@drawable/vessel" />

        <TextView
            android:id="@+id/txtName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="31dp"
            android:text="@string/name"
            android:textAlignment="viewEnd"
            android:textColor="#eee23a"
            android:textSize="24sp" />


    </RelativeLayout>
</android.support.constraint.ConstraintLayout>